--- a/keybinds.html
+++ b/keybinds.html
@@ -31,7 +31,7 @@
     <br>
       Press the same button again on the Turret to Upgrade
     <br>
-      E to shoot the Projectiles
+    E to shoot the Projectiles (5🪙)
     <br>
       Q to sell the Turrets adjacent to characters
     <br>
